// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with color danger 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #ff3d00;
  border: 2px solid #ff3d00;
  color: #212121;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:not(:disabled) {
  background-color: #b22a00;
  border: #b22a00;
}

<button
    class="c0"
    color="danger"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with color default 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #212121;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:not(:disabled) {
  background-color: #5a6268;
  border: #5a6268;
}

<button
    class="c0"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with color primary 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #ffc107;
  border: 2px solid #ffc107;
  color: #212121;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:not(:disabled) {
  background-color: #c79100;
  border: #c79100;
}

<button
    class="c0"
    color="primary"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with color primary and link 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #ffc107;
  border: 2px solid #ffc107;
  color: #212121;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:not(:disabled) {
  background-color: #c79100;
  border: #c79100;
}

<button
    class="c0"
    color="primary"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with color primay and variant outlined 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #ffc107;
  border: 2px solid #ffc107;
  color: #212121;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:not(:disabled) {
  background-color: #c79100;
  border: #c79100;
}

<button
    class="c0"
    color="primary"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with variants default 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #212121;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:not(:disabled) {
  background-color: #5a6268;
  border: #5a6268;
}

<button
    class="c0"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with variants link 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #212121;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:not(:disabled) {
  background-color: #5a6268;
  border: #5a6268;
}

<button
    class="c0"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with variants outlined 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #212121;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:not(:disabled) {
  background-color: #5a6268;
  border: #5a6268;
}

<button
    class="c0"
    color="default"
    type="button"
  />
</DocumentFragment>
`;
